[package]
name = "rnp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"
tokio = "1.0.3"
rsocket_rust = "0.7"
rsocket_rust_transport_tcp = "0.7.4"